force-app/main/default/objects/Merge_Candidate__c/Merge_Candidate__c.object-meta.xml
<CustomObject>
    <description>An ambiguous duplicate pair from the identity pass, for human review.</description>
    <label>Merge Candidate</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Merge Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>