force-app/main/default/objects/Merge_Candidate__c/fields/Contact_A__c.field-meta.xml
<CustomField>
    <fullName>Contact_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact A</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Merge Candidates (A)</relationshipLabel>
    <relationshipName>Merge_Candidates_A</relationshipName>
    <type>Lookup</type>
</CustomField>