force-app/main/default/objects/Merge_Candidate__c/fields/Contact_B__c.field-meta.xml
<CustomField>
    <fullName>Contact_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact B</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Merge Candidates (B)</relationshipLabel>
    <relationshipName>Merge_Candidates_B</relationshipName>
    <type>Lookup</type>
</CustomField>