force-app/main/default/objects/Merge_Candidate__c/fields/Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>Match_Reason__c</fullName>
    <description>Which rules matched (email, phone, name).</description>
    <label>Match Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>