force-app/main/default/objects/Merge_Candidate__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <description>0-100 from the Apex identity batch.</description>
    <label>Match Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>