force-app/main/default/objects/Merge_Candidate__c/fields/Pair_Key__c.field-meta.xml
<CustomField>
    <fullName>Pair_Key__c</fullName>
    <description>Lower Id + '|' + higher Id. Makes proposals idempotent.</description>
    <label>Pair Key</label>
    <externalId>true</externalId>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>