force-app/main/default/objects/Merge_Candidate__c/validationRules/Distinct_Pair_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Distinct_Pair_Required</fullName>
    <active>true</active>
    <description>A merge candidate needs two different contacts.</description>
    <errorConditionFormula>OR(ISBLANK(Contact_A__c), ISBLANK(Contact_B__c), Contact_A__c = Contact_B__c)</errorConditionFormula>
    <errorDisplayField>Contact_B__c</errorDisplayField>
    <errorMessage>Pick two different contacts.</errorMessage>
</ValidationRule>